legend-pure-rust/crates/parser/tests/snapshots/test_function__function_with_constraint_block.snap
---
source: crates/parser/tests/test_function.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [
                            Parameter {
                                name: "x",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "Integer",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        algebra_ops: [],
                                        subset_bound: None,
                                        equal_binding: None,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 28,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Integer",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                algebra_ops: [],
                                subset_bound: None,
                                equal_binding: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 35,
                                    end_line: 2,
                                    end_column: 41,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        constraints: [
                            Constraint {
                                name: Some(
                                    "nonNegative",
                                ),
                                function_definition: Comparison(
                                    ComparisonExpr {
                                        left: Variable(
                                            Variable {
                                                name: "x",
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 18,
                                                    end_line: 4,
                                                    end_column: 18,
                                                },
                                            },
                                        ),
                                        op: GreaterThanOrEqual,
                                        right: Literal(
                                            Integer(
                                                IntegerLiteral {
                                                    value: 0,
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 4,
                                                        start_column: 24,
                                                        end_line: 4,
                                                        end_column: 24,
                                                    },
                                                },
                                            ),
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 21,
                                            end_line: 4,
                                            end_column: 22,
                                        },
                                    },
                                ),
                                enforcement_level: None,
                                external_id: None,
                                message: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 4,
                                    end_line: 4,
                                    end_column: 14,
                                },
                            },
                        ],
                        body: [
                            Arithmetic(
                                ArithmeticExpr {
                                    left: Variable(
                                        Variable {
                                            name: "x",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 7,
                                                start_column: 4,
                                                end_line: 7,
                                                end_column: 4,
                                            },
                                        },
                                    ),
                                    op: Plus,
                                    right: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                value: 1,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 7,
                                                    start_column: 9,
                                                    end_line: 7,
                                                    end_column: 9,
                                                },
                                            },
                                        ),
                                    ),
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 7,
                                        start_column: 7,
                                        end_line: 7,
                                        end_column: 7,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 8,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
