legend-pure-rust/crates/parser/tests/snapshots/test_function__native_function_no_params.snap
---
source: crates/parser/tests/test_function.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                NativeFunction(
                    NativeFunctionDef {
                        package: Some(
                            Package {
                                name: "date",
                                parent: Some(
                                    Package {
                                        name: "functions",
                                        parent: Some(
                                            Package {
                                                name: "pure",
                                                parent: Some(
                                                    Package {
                                                        name: "meta",
                                                        parent: None,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 17,
                                                            end_line: 2,
                                                            end_column: 20,
                                                        },
                                                    },
                                                ),
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 23,
                                                    end_line: 2,
                                                    end_column: 26,
                                                },
                                            },
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 29,
                                            end_line: 2,
                                            end_column: 37,
                                        },
                                    },
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 40,
                                    end_line: 2,
                                    end_column: 43,
                                },
                            },
                        ),
                        name: "now",
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "DateTime",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 53,
                                    end_line: 2,
                                    end_column: 60,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 6,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
