legend-pure-rust/crates/parser/tests/snapshots/test_function__native_function_simple.snap
---
source: crates/parser/tests/test_function.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                NativeFunction(
                    NativeFunctionDef {
                        package: Some(
                            Package {
                                name: "string",
                                parent: Some(
                                    Package {
                                        name: "functions",
                                        parent: Some(
                                            Package {
                                                name: "pure",
                                                parent: Some(
                                                    Package {
                                                        name: "meta",
                                                        parent: None,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 17,
                                                            end_line: 2,
                                                            end_column: 20,
                                                        },
                                                    },
                                                ),
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 23,
                                                    end_line: 2,
                                                    end_column: 26,
                                                },
                                            },
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 29,
                                            end_line: 2,
                                            end_column: 37,
                                        },
                                    },
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 40,
                                    end_line: 2,
                                    end_column: 45,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "plus",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 17,
                                end_line: 2,
                                end_column: 20,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [
                            Parameter {
                                name: "strings",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "String",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 62,
                                            end_line: 2,
                                            end_column: 67,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    ZeroOrMany,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 53,
                                    end_line: 2,
                                    end_column: 59,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "String",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 74,
                                    end_line: 2,
                                    end_column: 79,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 6,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
